<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:foregroundTint="@color/white"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="12dp"
        android:background="#7867F4"
        android:text="@string/Button1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="172dp"
        android:background="#7867F4"
        android:text="@string/Button2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="257dp"
        android:layout_height="55dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:background="#B37CCCE5"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_pass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_pass2"
        android:layout_width="257dp"
        android:layout_height="55dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="45dp"
        android:autofillHints=""
        android:background="#B37CCCE5"
        android:ems="10"
        android:hint="@string/et_pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="188dp"
        android:layout_height="176dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/iv_logo2"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869"
        app:srcCompat="@mipmap/ic_launcher" />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="164dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/panelBackground"
        android:checked="false"
        android:freezesText="true"
        android:hapticFeedbackEnabled="false"
        android:text="@string/temaSwitch"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>